Add logging, prototype Git support

--- a/notebooks/issue-response-viz.ipynb
+++ b/notebooks/issue-response-viz.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +684,7 @@
        "[31271 rows x 5 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,12 +696,505 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/howderek/anaconda3/envs/augur/lib/python3.6/site-packages/ipykernel_launcher.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>pull_request</th>\n",
+       "      <th>minutes_to_comment</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>opened</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2009-04-05</th>\n",
+       "      <td>1.366260e+05</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>22716.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-04-12</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-04-19</th>\n",
+       "      <td>1.366250e+05</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>41.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-04-26</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-05-03</th>\n",
+       "      <td>1.366240e+05</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-05-10</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-05-17</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-05-24</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-05-31</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-06-07</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-06-14</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-06-21</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-06-28</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-07-05</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-07-12</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-07-19</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-07-26</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-08-02</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-08-09</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-08-16</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-08-23</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-08-30</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-09-06</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-09-13</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-09-20</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-09-27</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-10-04</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-10-11</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-10-18</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-10-25</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-02-12</th>\n",
+       "      <td>4.378245e+07</td>\n",
+       "      <td>0.676923</td>\n",
+       "      <td>815.235294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-02-19</th>\n",
+       "      <td>4.419240e+07</td>\n",
+       "      <td>0.659794</td>\n",
+       "      <td>4234.700000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-02-26</th>\n",
+       "      <td>4.463189e+07</td>\n",
+       "      <td>0.696721</td>\n",
+       "      <td>2724.100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-03-05</th>\n",
+       "      <td>4.501469e+07</td>\n",
+       "      <td>0.605505</td>\n",
+       "      <td>3807.450000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-03-12</th>\n",
+       "      <td>4.542362e+07</td>\n",
+       "      <td>0.614583</td>\n",
+       "      <td>3435.227273</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-03-19</th>\n",
+       "      <td>4.587048e+07</td>\n",
+       "      <td>0.630435</td>\n",
+       "      <td>5906.461538</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-03-26</th>\n",
+       "      <td>4.627955e+07</td>\n",
+       "      <td>0.554348</td>\n",
+       "      <td>5003.078431</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-04-02</th>\n",
+       "      <td>4.674666e+07</td>\n",
+       "      <td>0.690141</td>\n",
+       "      <td>3679.137931</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-04-09</th>\n",
+       "      <td>4.715501e+07</td>\n",
+       "      <td>0.597222</td>\n",
+       "      <td>3997.459459</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-04-16</th>\n",
+       "      <td>4.757452e+07</td>\n",
+       "      <td>0.600000</td>\n",
+       "      <td>2055.781250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-04-23</th>\n",
+       "      <td>4.797449e+07</td>\n",
+       "      <td>0.602740</td>\n",
+       "      <td>5236.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-04-30</th>\n",
+       "      <td>4.835881e+07</td>\n",
+       "      <td>0.645833</td>\n",
+       "      <td>4148.369565</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-05-07</th>\n",
+       "      <td>4.876544e+07</td>\n",
+       "      <td>0.565217</td>\n",
+       "      <td>1619.700000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-05-14</th>\n",
+       "      <td>4.921758e+07</td>\n",
+       "      <td>0.480000</td>\n",
+       "      <td>2083.434783</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-05-21</th>\n",
+       "      <td>4.960281e+07</td>\n",
+       "      <td>0.631579</td>\n",
+       "      <td>2998.857143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-05-28</th>\n",
+       "      <td>5.004163e+07</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>2731.571429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-06-04</th>\n",
+       "      <td>5.032022e+07</td>\n",
+       "      <td>0.747368</td>\n",
+       "      <td>3386.404762</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-06-11</th>\n",
+       "      <td>5.074241e+07</td>\n",
+       "      <td>0.684932</td>\n",
+       "      <td>7817.344828</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-06-18</th>\n",
+       "      <td>5.114025e+07</td>\n",
+       "      <td>0.573333</td>\n",
+       "      <td>2420.848485</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-06-25</th>\n",
+       "      <td>5.156680e+07</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>3295.292683</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-07-02</th>\n",
+       "      <td>5.193815e+07</td>\n",
+       "      <td>0.733333</td>\n",
+       "      <td>2831.047619</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-07-09</th>\n",
+       "      <td>5.234533e+07</td>\n",
+       "      <td>0.679487</td>\n",
+       "      <td>1322.114286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-07-16</th>\n",
+       "      <td>5.275733e+07</td>\n",
+       "      <td>0.764045</td>\n",
+       "      <td>2490.281250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-07-23</th>\n",
+       "      <td>5.314798e+07</td>\n",
+       "      <td>0.686047</td>\n",
+       "      <td>2552.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-07-30</th>\n",
+       "      <td>5.353208e+07</td>\n",
+       "      <td>0.757009</td>\n",
+       "      <td>1834.900000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-06</th>\n",
+       "      <td>5.397232e+07</td>\n",
+       "      <td>0.750000</td>\n",
+       "      <td>1020.473684</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-13</th>\n",
+       "      <td>5.437936e+07</td>\n",
+       "      <td>0.784173</td>\n",
+       "      <td>911.290909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-20</th>\n",
+       "      <td>5.477579e+07</td>\n",
+       "      <td>0.800000</td>\n",
+       "      <td>760.769231</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-27</th>\n",
+       "      <td>5.518430e+07</td>\n",
+       "      <td>0.808081</td>\n",
+       "      <td>828.064516</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-09-03</th>\n",
+       "      <td>5.552484e+07</td>\n",
+       "      <td>0.631579</td>\n",
+       "      <td>606.750000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>440 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      id  pull_request  minutes_to_comment\n",
+       "opened                                                    \n",
+       "2009-04-05  1.366260e+05      0.000000        22716.000000\n",
+       "2009-04-12           NaN           NaN                 NaN\n",
+       "2009-04-19  1.366250e+05      0.000000           41.000000\n",
+       "2009-04-26           NaN           NaN                 NaN\n",
+       "2009-05-03  1.366240e+05      0.000000            5.000000\n",
+       "2009-05-10           NaN           NaN                 NaN\n",
+       "2009-05-17           NaN           NaN                 NaN\n",
+       "2009-05-24           NaN           NaN                 NaN\n",
+       "2009-05-31           NaN           NaN                 NaN\n",
+       "2009-06-07           NaN           NaN                 NaN\n",
+       "2009-06-14           NaN           NaN                 NaN\n",
+       "2009-06-21           NaN           NaN                 NaN\n",
+       "2009-06-28           NaN           NaN                 NaN\n",
+       "2009-07-05           NaN           NaN                 NaN\n",
+       "2009-07-12           NaN           NaN                 NaN\n",
+       "2009-07-19           NaN           NaN                 NaN\n",
+       "2009-07-26           NaN           NaN                 NaN\n",
+       "2009-08-02           NaN           NaN                 NaN\n",
+       "2009-08-09           NaN           NaN                 NaN\n",
+       "2009-08-16           NaN           NaN                 NaN\n",
+       "2009-08-23           NaN           NaN                 NaN\n",
+       "2009-08-30           NaN           NaN                 NaN\n",
+       "2009-09-06           NaN           NaN                 NaN\n",
+       "2009-09-13           NaN           NaN                 NaN\n",
+       "2009-09-20           NaN           NaN                 NaN\n",
+       "2009-09-27           NaN           NaN                 NaN\n",
+       "2009-10-04           NaN           NaN                 NaN\n",
+       "2009-10-11           NaN           NaN                 NaN\n",
+       "2009-10-18           NaN           NaN                 NaN\n",
+       "2009-10-25           NaN           NaN                 NaN\n",
+       "...                  ...           ...                 ...\n",
+       "2017-02-12  4.378245e+07      0.676923          815.235294\n",
+       "2017-02-19  4.419240e+07      0.659794         4234.700000\n",
+       "2017-02-26  4.463189e+07      0.696721         2724.100000\n",
+       "2017-03-05  4.501469e+07      0.605505         3807.450000\n",
+       "2017-03-12  4.542362e+07      0.614583         3435.227273\n",
+       "2017-03-19  4.587048e+07      0.630435         5906.461538\n",
+       "2017-03-26  4.627955e+07      0.554348         5003.078431\n",
+       "2017-04-02  4.674666e+07      0.690141         3679.137931\n",
+       "2017-04-09  4.715501e+07      0.597222         3997.459459\n",
+       "2017-04-16  4.757452e+07      0.600000         2055.781250\n",
+       "2017-04-23  4.797449e+07      0.602740         5236.333333\n",
+       "2017-04-30  4.835881e+07      0.645833         4148.369565\n",
+       "2017-05-07  4.876544e+07      0.565217         1619.700000\n",
+       "2017-05-14  4.921758e+07      0.480000         2083.434783\n",
+       "2017-05-21  4.960281e+07      0.631579         2998.857143\n",
+       "2017-05-28  5.004163e+07      0.666667         2731.571429\n",
+       "2017-06-04  5.032022e+07      0.747368         3386.404762\n",
+       "2017-06-11  5.074241e+07      0.684932         7817.344828\n",
+       "2017-06-18  5.114025e+07      0.573333         2420.848485\n",
+       "2017-06-25  5.156680e+07      0.666667         3295.292683\n",
+       "2017-07-02  5.193815e+07      0.733333         2831.047619\n",
+       "2017-07-09  5.234533e+07      0.679487         1322.114286\n",
+       "2017-07-16  5.275733e+07      0.764045         2490.281250\n",
+       "2017-07-23  5.314798e+07      0.686047         2552.666667\n",
+       "2017-07-30  5.353208e+07      0.757009         1834.900000\n",
+       "2017-08-06  5.397232e+07      0.750000         1020.473684\n",
+       "2017-08-13  5.437936e+07      0.784173          911.290909\n",
+       "2017-08-20  5.477579e+07      0.800000          760.769231\n",
+       "2017-08-27  5.518430e+07      0.808081          828.064516\n",
+       "2017-09-03  5.552484e+07      0.631579          606.750000\n",
+       "\n",
+       "[440 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = df.set_index(['opened'])\n",
-    "df = df.dropna()"
+    "df2 = df\n",
+    "df2 = df2.dropna()\n",
+    "df2['opened'] = pd.to_datetime(df2['opened'], errors='coerce')\n",
+    "indexed_df = df.set_index(['opened'])\n",
+    "indexed_df.dropna()\n",
+    "indexed_df.resample('W').mean()"
    ]
   },
   {
@@ -1341,7 +1834,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
