Add JSON config, migration tools, metadata

--- a/notebooks/git-testing.ipynb
+++ b/notebooks/git-testing.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-05-21 17:30:18 augur[89285] INFO Git: Updating https://github.com/OSSHealth/augur.git\n"
+     ]
+    }
+   ],
    "source": [
     "import augur\n",
     "\n",
@@ -15,10 +23,30 @@
     "from dulwich.repo import Repo\n",
     "from dulwich import porcelain as git\n",
     "\n",
-    "augurApp = augur.Application('../augur.cfg')\n",
+    "augurApp = augur.Application('../augur.config.json')\n",
     "# we only need an instance of the GitHubAPI class\n",
     "git_instance = augurApp.git()\n",
     "augurApp.finalize_config()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Repo at '/Users/howderek/Projects/Python/augur/runtime/git_repos/augur'>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "git_instance.lines_changed_minus_whitespace('https://github.com/OSSHealth/augur.git')"
    ]
   },
   {
@@ -31,9 +59,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (augur)",
    "language": "python",
-   "name": "python3"
+   "name": "augur"
   },
   "language_info": {
    "codemirror_mode": {
@@ -45,7 +73,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
