--- a/notebooks/git-testing.ipynb
+++ b/notebooks/git-testing.ipynb
@@ -9,7 +9,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-05-21 17:30:18 augur[89285] INFO Git: Updating https://github.com/OSSHealth/augur.git\n"
+      "2018-05-21 18:43:59 augur[93428] INFO Git: Updating https://github.com/OSSHealth/augur.git\n",
+      "2018-05-21 18:44:00 augur[93428] INFO Git: Updating git://anongit.freedesktop.org/git/cairo\n"
      ]
     }
    ],
@@ -46,6 +47,16 @@
     }
    ],
    "source": [
+    "def lines_changed_minus_whitespace(self, repo_url):\n",
+    "        \"\"\"\n",
+    "        Makes sure the storageFolder contains updated versions of all the repos\n",
+    "        \"\"\"\n",
+    "        repo = self.get_repo_object(repo_url)\n",
+    "        df = pd.DataFrame(columns=['commit', 'date', 'author', 'additions', 'whitespace_additions', 'deletions', 'whitespace_deletions'])\n",
+    "        \n",
+    "        return repo\n",
+    "    \n",
+    "augur.Git.lines_changed_minus_whitespace = lines_changed_minus_whitespace\n",
     "git_instance.lines_changed_minus_whitespace('https://github.com/OSSHealth/augur.git')"
    ]
   },
