Add global caching, fix runtime, improve Git perf

--- a/notebooks/git-testing.ipynb
+++ b/notebooks/git-testing.ipynb
@@ -9,13 +9,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-05-23 11:37:58 git.cmd[28379] DEBUG Popen(['git', 'version'], cwd=/Users/howderek/Projects/Python/augur/notebooks, universal_newlines=False, shell=None)\n",
-      "2018-05-23 11:37:58 git.cmd[28379] DEBUG Popen(['git', 'version'], cwd=/Users/howderek/Projects/Python/augur/notebooks, universal_newlines=False, shell=None)\n",
-      "2018-05-23 11:37:58 augur[28379] DEBUG Initializing Git\n",
-      "2018-05-23 11:37:58 augur[28379] DEBUG Initializing LocalCSV\n",
-      "2018-05-23 11:37:58 augur[28379] INFO Git: Updating https://github.com/OSSHealth/augur.git\n",
-      "2018-05-23 11:37:58 augur[28379] DEBUG Pulling https://github.com/OSSHealth/augur.git\n",
-      "2018-05-23 11:37:58 git.cmd[28379] DEBUG Popen(['git', 'pull'], cwd=/Users/howderek/Projects/Python/augur/runtime/git_repos/augur, universal_newlines=False, shell=None)\n"
+      "2018-06-04 22:18:48 howderek-macbook.local augur[48377] INFO Git: Updating https://git.enlightenment.org/apps/express.git\n",
+      "2018-06-04 22:18:49 howderek-macbook.local augur[48377] INFO Git: Calculating metrics for https://git.enlightenment.org/apps/express.git\n",
+      "2018-06-04 22:18:49 howderek-macbook.local augur[48377] INFO Git: Update completed for https://git.enlightenment.org/apps/express.git\n",
+      "2018-06-04 22:18:49 howderek-macbook.local augur[48377] INFO Git: Updating git://anongit.kde.org/kaffeine\n",
+      "2018-06-04 22:18:49 howderek-macbook.local augur[48377] INFO Git: Calculating metrics for git://anongit.kde.org/kaffeine\n",
+      "2018-06-04 22:18:50 howderek-macbook.local augur[48377] INFO Git: Update completed for git://anongit.kde.org/kaffeine\n",
+      "2018-06-04 22:18:50 howderek-macbook.local augur[48377] INFO Git: Updating https://linuxtv.org/git/tvtime.git\n",
+      "2018-06-04 22:18:51 howderek-macbook.local augur[48377] INFO Git: Calculating metrics for https://linuxtv.org/git/tvtime.git\n",
+      "2018-06-04 22:18:51 howderek-macbook.local augur[48377] INFO Git: Update completed for https://linuxtv.org/git/tvtime.git\n"
      ]
     }
    ],
@@ -35,25 +37,27 @@
     "\n",
     "augurApp = augur.Application('../augur.config.json')\n",
     "# we only need an instance of the GitHubAPI class\n",
-    "git_instance = augurApp.git()\n",
+    "g = augurApp.git()\n",
     "csv = augurApp.localcsv()\n",
-    "augurApp.finalize_config()"
+    "augurApp.finalize_config()\n",
+    "g.update()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['https://github.com/OSSHealth/augur.git']"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "module 'augur' has no attribute 'Git'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-e5d310795b90>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0maugur\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGit\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdownloaded_repos\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdownloaded_repos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0mgit_instance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdownloaded_repos\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'augur' has no attribute 'Git'"
+     ]
     }
    ],
    "source": [
