--- a/notebooks/PiperMail.ipynb
+++ b/notebooks/PiperMail.ipynb
@@ -72,7 +72,7 @@
    ],
    "source": [
     "import augur\n",
-    "from augur.Piper_reader import Piper_mail\n",
+    "from augur.PiperReader import PiperMail\n",
     "\n",
     "# import everything from githubapi.py and ghtorrent.py so we can\n",
     "# just copy and paste our function later\n",
@@ -120,11 +120,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "Piper_mail()"
+    "PiperMail()"
    ]
   }
  ],
